alpm-types/src/snapshots/name::invalid_shared_object_name_parser@case_2.snap
---
source: alpm-types/src/name.rs
---
error: invalid shared object name
 | 
 | example.so.1
 |           ^ expected end of input.
